Fix more bootstrap layout issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,13 +43,6 @@ h1 {
     padding: 1.25em;
 }
 
-.btn-outline-secondary,
-.btn-outline-secondary:hover,
-.btn-secondary.dropdown-toggle {
-    color: #555;
-    border-color: #888;
-}
-
 .btn>i.fa:not(:last-child) {
     margin-right: 10px;
 }
